some tests & fix; edit iniParser